--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "wouter": "^3.3.5"
   },
   "devDependencies": {
+    "@types/node": "^22.5.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
