--- a/web/package.json
+++ b/web/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@remixicon/react": "^4.4.0",
     "@tremor/react": "^3.18.3",
@@ -24,6 +26,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-use": "^17.5.1",
     "recharts": "^2.13.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
