--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -35,6 +35,7 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 dotenvy = "0.15.7"
 anyhow = "1.0.91"
+typeshare = "1.0.4"
 
 [build-dependencies]
 static-files = "0.2.4"
