Display more information inside Timeline

--- a/typeshare.toml
+++ b/typeshare.toml
@@ -1,8 +1,6 @@
 [typescript.type_mappings]
-"Decimal" = "number"
+"Decimal" = "string"
 "BTreeMap" = "any"
-# "BTreeMap<i32, T>" = "Record<number, T>"
-# "BTreeMap<String, T>" = "Record<string, T>"
 "Uuid" = "string"
 "DateTime" = "Date"
 "NaiveDateTime" = "Date"
