--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,7 +11,7 @@ deunicode = "1.6.0"
 csv = "1.3.1"
 serde = { version = "1.0.215", features = ["derive"] }
 refinery = { version = "0.8", features = ["tokio-postgres"] }
-rust_decimal = { version = "1.36.0", features = ["db-tokio-postgres"] }
+rust_decimal = { version = "1.36.0", features = ["db-tokio-postgres", "serde"] }
 tokio = { version = "1.42.0", features = ["full"] }
 reqwest = { version = "0.12.9", features = ["json", "rustls-tls"] }
 serde_json = "1.0.133"
