--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -37,6 +37,7 @@ tracing-subscriber = "0.3.19"
 dotenvy = "0.15.7"
 anyhow = "1.0.94"
 typeshare = "1.0.4"
+futures = "0.3.31"
 
 [build-dependencies]
 static-files = "0.2.4"
