--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/tailwindcss": "^0.2.1",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.3",
@@ -26,13 +27,15 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-use": "^17.6.0",
     "recharts": "^2.15.0",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.17",
-    "wouter": "^3.3.5"
+    "wouter": "^3.3.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
