--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-safe-area": "^0.6.0",
     "wouter": "^3.6.0",
     "yup": "^1.6.1"
   },
