--- a/web/package.json
+++ b/web/package.json
@@ -11,21 +11,24 @@
     "upgrade": "pnpm up --latest"
   },
   "dependencies": {
-    "@headlessui/tailwindcss": "^0.2.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
-    "@remixicon/react": "^4.6.0",
-    "@tremor/react": "^3.18.7",
-    "autoprefixer": "^10.4.20",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@tailwindcss/vite": "^4.0.8",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "postcss": "^8.5.2",
-    "prop-types": "^15.8.1",
+    "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-use": "^17.6.0",
@@ -33,13 +36,14 @@
     "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.8",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "wouter": "^3.6.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@types/node": "^22.13.4",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
